test/corpus/literals.txt
================================================================================
Simple identifiers
================================================================================

helloWorld

--------------------------------------------------------------------------------

(source_file
  (simple_identifier))

================================================================================
Unicode identifiers
================================================================================

अ९

--------------------------------------------------------------------------------

(source_file
  (simple_identifier))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (boolean_literal)
  (boolean_literal))

================================================================================
String literals
================================================================================

"Hello World!"
"""
This is a "multiline"
string.
"""

--------------------------------------------------------------------------------

(source_file
  (string_literal (string_content))
  (string_literal (string_content) (string_content) (string_content)))

================================================================================
String literal with lots of repeated quotes
================================================================================

""""What do you "mean"?", he said.
There's a lot of ""quotations"". Even at the "end""""

--------------------------------------------------------------------------------

(source_file
  (string_literal 
    (string_content) 
    (string_content)
    (string_content)
    (string_content)
    (string_content)
    (string_content)
    (string_content)
    (string_content)))

================================================================================
String interpolation
================================================================================

"Sample $string.interpolation literal"
"Sample ${"string.interpolation"} literal"
"""
Multiline
${"""string interpolation"""} $literal
"""

--------------------------------------------------------------------------------

(source_file
  (string_literal
    (string_content)
    (interpolated_identifier)
    (string_content))
  (string_literal
    (string_content)
    (interpolated_expression
      (string_literal
        (string_content)))
    (string_content))
  (string_literal
    (string_content)
    (interpolated_expression
      (string_literal
        (string_content)))
    (string_content)
    (interpolated_identifier)
    (string_content)))

================================================================================
More string interpolation
================================================================================

"$"
"$1"
"$ $ $"
"\$foo"

--------------------------------------------------------------------------------

(source_file
  (string_literal
    (string_content))
  (string_literal
    (string_content)
    (string_content))
  (string_literal
    (string_content)
    (string_content)
    (string_content)
    (string_content)
    (string_content))
  (string_literal
    (string_content)))

================================================================================
Integer literals
================================================================================

0
8
23
9847

--------------------------------------------------------------------------------

(source_file
  (integer_literal)
  (integer_literal)
  (integer_literal)
  (integer_literal))

================================================================================
Real literals
================================================================================

0.0
-23.434
1e-10
4.3f
+53.9e-3F

--------------------------------------------------------------------------------

(source_file
  (real_literal)
  (prefix_expression
    (real_literal))
  (real_literal)
  (real_literal)
  (prefix_expression
    (real_literal)))

================================================================================
Unicode literals
================================================================================

assertEquals("\u214E\uA7B5\u2CEF", "\u2132\uA7B4\u2CEF".lowercase())

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (simple_identifier)
    (call_suffix
      (value_arguments
        (value_argument
          (string_literal (string_content)))
        (value_argument
          (call_expression
            (navigation_expression
              (string_literal (string_content))
              (navigation_suffix
                (simple_identifier)))
            (call_suffix
              (value_arguments))))))))

================================================================================
Object literals
================================================================================

val x = object : D {}

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    variable: (variable_declaration
      (simple_identifier))
    expression: (object_literal
      delegation_specifiers: (delegation_specifier
        (user_type
          (type_identifier)))
      body: (class_body))))
